Update and rename index.md to index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-# Slime Guy Team
+# Slime Guy
 
 ![Pic](website%20Images/both.png)
 
@@ -38,6 +38,7 @@ Slime guy is a game created for the subject of Videogame Development as part of 
 - Enemies and interactive items(Candy) are managed through an EntityManager system which creates and updates them. 
 
 # The Game
+<iframe width="560" height="315" src="https://www.youtube.com/embed/iqryxfKou0A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 - Move the player using the WAD keys and SPACEBAR (W to jump press, SPACEBAR to glide, A/D as Left/Right movement)
 - Press F1 to begin from the first level starting position
