--- a/index.html
+++ b/index.html
@@ -4,17 +4,28 @@
 
 <h1>SLIME GUY</h1>
   <h2> The Team</h2>  
-  <img src="/website%20Images/both.png" alt="W3Schools.com" width="735" height="726">
+  <img src="/website%20Images/both.png" alt="https://github.com/RustikTie/WINGS/master" width="735" height="726">
   <h2>Ivan Drofiak</h2>    
   <a href="https://github.com/FurryGhoul">Github</a>
   <ul>
-  <li>Entity system</li>
+  <li>Entity System</li>
   <li>Player</li>
   <li>Enemies</li>
   <li>Map Design</li>
   <li>UI System</li>
   <li>Save and Load</li>
   <li>Main Menu</li>
+  </ul>
+  
+    <h2>Clara Ratera</h2>    
+  <a href="https://github.com/RustikTie">Github</a>
+  <ul>
+  <li>Entity System</li>
+  <li>UI System</li>
+  <li>Brofiler</li>
+  <li>Frame Cap and movement normalized</li>
+  <li>Spritesheets</li>
+  <li>XML Loading</li>
   </ul>
   
   
