--- a/index.html
+++ b/index.html
@@ -28,7 +28,35 @@
   <li>XML Loading</li>
   </ul>
   
+  <h2 The Game </h2>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/iqryxfKou0A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <h2> Sub-systems </h2>
   
+  
+  <h2>License </2>
+    <p> MIT License   </p>
+ 
+ <p>Copyright (c) 2018 Clara Ratera, Ivan Drofiak   </p>
+
+ <p>Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:   </p>
+
+ <p>The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.  </p>
+
+ <p>THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
+
+  </p>
  
 
 </body>
