--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <h1>SLIME GUY</h1>
   <h2> The Team</h2>  
-  <img src=""https://github.com/RustikTie/WINGS/master/website%20Images/both.png" alt="https://github.com/RustikTie/WINGS/master" width="735" height="726">
+  <img src="https://github.com/RustikTie/WINGS/blob/master/website%20Images/both.png?raw=true" alt="https://github.com/RustikTie/WINGS/master" width="735" height="726">
   <h2>Ivan Drofiak</h2>    
   <a href="https://github.com/FurryGhoul">Github</a>
   <ul>
